[package]
name = "bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
thiserror = { version = "1.0.32", default-features = false }
anyhow = "1.0"